--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -2,3 +2,13 @@
   padding: 0;
   margin: 0;
 }
+
+h1 {
+}
+
+.title {
+  text-align: center;
+  border-style: double;
+  border-color: brown;
+  border: 2px;
+}
