added glitches text to the main site

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,10 +49,11 @@ h2 a:hover {
 }
 
 /*
-
-GLITCH
-
+"GLITCH"
+CSS written by Lucas Bebber
+http://codepen.io/lbebber/pen/ypgql
 */
+
 .glitch {
   position: relative;
   margin: 0 auto;
