--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,12 @@
+/* Oulipo */
+
 * {
   padding: 0;
   margin: 0;
 }
 
 body {
-	width: 600px;
+	width: 750px;
 	margin: 0 auto;
 	background-color: #2B2207;
 	background:url(../img/bg.png);
@@ -12,40 +14,60 @@ body {
 
 h1 {
 	font-family: 'Arvo', serif;
-	font-size: 70px;
-	color: #ff900d;
-	text-shadow: -4px 3px 0 #624019, -8px 7px 0 #181304;
-	text-align: center;
+	font-size: 85px;
 }
 
-body:hover{
-	background-position:35% 20px, top right;
+.title {
+    background-image:url(../img/bg.gif);
+    position: relative;
+    margin-top: 30px;
+    padding-bottom: 10px;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.6);
+    text-shadow: -4px 4px 0 #2196F3, -7px 7px 0 #FFEB3B, -10px 10px #F44336;
 }
 
-h2 {
+.content {
+    margin-top: 30px;
+    padding: 30px;
+    background-color: rgba(3, 1, 4, 0.31);
+    border-width: 4px;
+    border-color: pink;
+}
+
+.project-link {
     color: white;
     text-align: left;
 	font-family: 'Quicksand', sans-serif;
 	font-style: bold;
-	text-shadow: -4px 3px black;
-    color: #bfb79f;
+	/*text-shadow: -4px 3px white;*/
 }
 
-h2 a:link {
-    color: #bfb79f;
+.project-link h2 {
+     color: white;
+     margin-bottom: 5px;
+     margin-top: 5px;
 }
 
-h2 a:visited {
-    color: white;
+.project-link h2 span {
+    color: #B0B0B0;
+    font-size: 70%;
+    margin-left: 1em;
 }
 
-h2 a:hover {
-    color: yellow;
+/*Every first .project-link*/
+.project-link:nth-child(3n+1) {
+    color: #FFEB3B;
 }
 
-#squarework {
-    color: #bfb79f;
-    text-shadow: -4px 3px #4F6B62;
+/*Every second .project-link*/
+.project-link:nth-child(3n+2) {
+    color: #2196F3;
+}
+
+/*Every third .project-link*/
+.project-link:nth-child(3n+3) {
+    color: #F44336;
 }
 
 /*
@@ -53,11 +75,6 @@ h2 a:hover {
 CSS written by Lucas Bebber
 http://codepen.io/lbebber/pen/ypgql
 */
-
-.glitch {
-  position: relative;
-  margin: 0 auto;
-}
 
 @keyframes noise-anim {
   0% {
@@ -160,10 +177,10 @@ http://codepen.io/lbebber/pen/ypgql
     clip: rect(37px, 9999px, 59px, 0);
   }
 }
-.glitch:after {
+.title:after {
   content: attr(data-text);
   position: absolute;
-  left: 45px;
+  left: 65px;
   top: 0;
   /*overflow: hidden;*/
   clip: rect(0, 900px, 0, 0);
@@ -235,10 +252,10 @@ http://codepen.io/lbebber/pen/ypgql
     clip: rect(6px, 9999px, 53px, 0);
   }
 }
-.glitch:before {
+.title:before {
   content: attr(data-text);
   position: absolute;
-  left: 47px;
+  left: 65px;
   top: 0;
   /*overflow: hidden;*/
   clip: rect(0, 900px, 0, 0);
