--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ h1 {
     text-shadow: -4px 4px 0 #2196F3, -7px 7px 0 #FFEB3B, -10px 10px #F44336;
 }
 
-.content {
+main {
     margin-top: 30px;
     padding: 30px;
     background-color: rgba(3, 1, 4, 0.31);
