--- a/portfolio/src/style.css
+++ b/portfolio/src/style.css
@@ -1,134 +1,59 @@
 body {
   font-family: 'Dosis', sans-serif;
   background: #F1F6FF;
+  display: block;
+  margin: 0;
 }
 
-nav {
-  /*position: absolute;*/
-  /*margin-left: 0 auto;*/
-  padding: 30px;
-  top: 20px;
-}
-
-h1 {
+#title {
   font-family: 'Comfortaa', cursive;
   text-transform: uppercase;
   letter-spacing: 0.18em;
-  font-size: 20px;
   line-height: 75%;
-  margin-top: 0;
 }
 
-ul {
-  padding-top: 20px;
+#title h1 {
+  font-size: 16px;
+  display: inline-block;
+  padding: 13px;
+  margin: 4px;
+  margin-left: 0;
+  background-color: #9CBEF2;
+  color: black;
+}
+
+nav {
+  margin: 30px;
+  margin-top: 30px;
+  float: left;
+}
+
+nav ul {
   padding-left: 0;
   line-height: 1.6em;
   letter-spacing: 0.08em;
   list-style-type: none;
-  font-size: small;
-}
-
-/*auto img resize */
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-/*top of main view fix*/
-.container{
-  margin: 0;
-  top: 20px;
-}
-
-.main {
-  margin-top: 20px;
-}
-
-.image-block {
-  padding: 0;
-  padding-right: 5px;
-  padding-bottom: 5px;
-}
-
-/*IMAGE HOVER EFFECT*/
-
-.hovereffect {
-  width: 100%;
-  height: 100%;
-  float: left;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
-  cursor: default;
-}
-
-.hovereffect .overlay {
-  position: absolute;
-  overflow: hidden;
-  width: 80%;
-  height: 80%;
-  left: 10%;
-  top: 10%;
-  /*border-bottom: 1px solid #FFF;
-  border-top: 1px solid #FFF;*/
-  /*-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;*/
-  /*transition: opacity 0.35s, transform 0.35s;*/
-  /*-webkit-transform: scale(0,1);*/
-  /*-ms-transform: scale(0,1);*/
-  transform: scale(0,1);
-}
-
-.hovereffect:hover .overlay {
-  opacity: 1;
-  filter: alpha(opacity=100);
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  transform: scale(1);
-}
-
-.hovereffect img {
-  display: block;
-  position: relative;
-  -webkit-transition: all 0.25s;
-  transition: all 0.25s;
-}
-
-.hovereffect:hover img {
-  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feComponentTransfer color-interpolation-filters="sRGB"><feFuncR type="linear" slope="0.6" /><feFuncG type="linear" slope="0.6" /><feFuncB type="linear" slope="0.6" /></feComponentTransfer></filter></svg>#filter');
-  filter: brightness(0.6);
-  -webkit-filter: brightness(0.6);
-}
-
-.hovereffect h2 {
-  text-transform: uppercase;
-  text-align: center;
-  position: relative;
   font-size: 17px;
-  background-color: transparent;
-  color: #FFF;
-  padding: 1em 0;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  -webkit-transition: opacity 0.25s, -webkit-transform 0.25s;
-  transition: opacity 0.25s, transform 0.25s;
-  -webkit-transform: translate3d(0,-100%,0);
-  transform: translate3d(0,-100%,0);
 }
 
-.hovereffect a, hovereffect p {
-  color: #FFF;
-  padding: 1em 0;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  -webkit-transition: opacity 0.25s, -webkit-transform 0.25s;
-  transition: opacity 0.25s, transform 0.25s;
-  -webkit-transform: translate3d(0,100%,0);
-  transform: translate3d(0,100%,0);
+nav ul li {
+  padding-left: 7px;
+  padding-right: 7px;
 }
 
-.hovereffect:hover a, .hovereffect:hover p, .hovereffect:hover h2 {
-  opacity: 1;
-  filter: alpha(opacity=100);
-  -webkit-transform: translate3d(0,0,0);
-  transform: translate3d(0,0,0);
+nav ul li:hover {
+  display: inline-block;
+  transition: background .1s ease-in-out;
+  background: black;
+  color: #F1F6FF;
+}
+
+main {
+  display: inline-block;
+  margin: 30px;
+}
+
+img {
+  height: 250px;
+  width: 100%;
 }
