--- a/portfolio/src/style.css
+++ b/portfolio/src/style.css
@@ -3,30 +3,30 @@ body {
   background: #F1F6FF;
   display: block;
   margin: 0;
+  padding: 35px;
 }
 
 /*TITLES*/
 #title {
-  font-family: 'Comfortaa', cursive;
   text-transform: uppercase;
   letter-spacing: 0.18em;
   line-height: 75%;
 }
 
 #title h1 {
-  font-size: 16px;
+  font-family: 'Comfortaa', cursive;
+  font-size: 18px;
   display: inline-block;
   padding: 13px;
   margin: 4px;
   margin-left: 0;
   background-color: #9CBEF2;
   color: black;
+  /*border-left: 5px solid #5A88CE;*/
 }
 
 /*NAV BAR*/
 nav {
-  margin: 30px;
-  margin-top: 30px;
   float: left;
 }
 
@@ -35,7 +35,7 @@ nav ul {
   line-height: 1.6em;
   letter-spacing: 0.08em;
   list-style-type: none;
-  font-size: 17px;
+  font-size: 18px;
 }
 
 nav ul li {
@@ -45,31 +45,97 @@ nav ul li {
 
 nav ul li:hover {
   display: inline-block;
-  transition: background .1s ease-in-out;
-  background: black;
-  color: #F1F6FF;
+  transition: background .5s ease-in-out;
+  /*background: white;*/
+  color: black;
+  border-left: 5px solid #9CBEF2;
+}
+
+.selected-page {
+  color: black;
+  background: white;
+  display: block;
+  border-left: 5px solid #5A88CE;
+}
+
+.selected-page:hover {
+  display: block;
+  border-left: 5px solid #5A88CE;
+}
+
+/*For External Menu Links */
+nav ul li a {
+  color:inherit;
+  text-decoration: none;
 }
 
 /*MAIN SITE BODY */
 main {
-  display: inline-block;
-  margin: 30px;
+  margin-left: 35px;
+  height: 500px;
+
+  /*hide all pages in the beginning */
+  display: none;
 }
 
-h1 {
+/*general element styles */
+main h1, main h2, main h3, main h4, main h5, main h6 {
+  font-family: 'Inconsolata', serif;
+}
+
+main h1 {
   font-family: 'Comfortaa', cursive;
+  color: #5A88CE;
+  letter-spacing: 0.10em;
+  font-size: 20px;
+}
+
+main h2 {
+  color: #9CBEF2;
+  letter-spacing: 0.10em;
   text-transform: uppercase;
-  font-size: 22px;
+  font-size: 18px;
+}
+
+main h3 {
+  font-size: 16px;
+  font-style: italic;
+  font-weight: normal;
+}
+
+/*PAGES*/
+
+#about{
+  display: inline-block;
 }
 
 .crop-img {
-  width: 600px;
+  width: 650px;
   height: 150px;
   overflow: hidden;
 }
 
 .crop-img img {
-  width: 600px;
+  width: 650px;
   /*height: 300px;*/
   margin: -100px 0;
+}
+
+.img-caption {
+  font-size: 13px;
+  margin-top: 5px;
+  text-align: right;
+  color: grey;
+}
+
+footer {
+  font-size: 14px;
+  position: absolute;
+
+  bottom: 0;
+}
+
+#gpg {
+  color: #B19881;
+  text-decoration: none;
 }
