--- a/portfolio/src/style.css
+++ b/portfolio/src/style.css
@@ -74,6 +74,7 @@ nav ul li a {
 main {
   margin-left: 30px;
   height: 400px;
+  width: 600px;
 
   /*hide all pages in the beginning */
   display: none;
@@ -99,7 +100,7 @@ main h2 {
 }
 
 main h3 {
-  font-size: 16px;
+  font-size: 15px;
   font-style: italic;
   font-weight: normal;
 }
@@ -113,12 +114,14 @@ main h3 {
 .crop-img {
   /*width: 600px;*/
   height: 150px;
+  width: 100%;
   overflow: hidden;
 }
 
 .crop-img img {
-  width: 600px;
+  /*width: 600px;*/
   /*height: 300px;*/
+  width: 100%;
   margin: -100px 0;
 }
 
@@ -146,7 +149,37 @@ footer {
   text-decoration: none;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 860px) {
+
+  body {
+    padding: 20px;
+  }
+
+
+  #title h1 {
+    font-size: 15px;
+    padding: 12px;
+    margin: 0;
+    margin-bottom: 9px;
+  }
+
+  main {
+    margin-left: 20px;
+    width: 76%;
+  }
+  .crop-img {
+    width: 100%;
+  }
+  .crop-img img {
+    width: 100%;
+  }
+
+  nav ul {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 700px) {
   body {
     padding: 15px;
   }
