--- a/portfolio/src/style.css
+++ b/portfolio/src/style.css
@@ -135,11 +135,11 @@ main h3 {
 footer {
   text-align: center;
   font-size: 14px;
-  position: absolute;
   bottom: 0;
   right: 0;
   left: 0;
   padding: 15px;
+  margin-top: 40px;
   /*height: 100px;*/
 }
 
@@ -181,7 +181,8 @@ footer {
 
 @media screen and (max-width: 700px) {
   body {
-    padding: 15px;
+    padding: 0;
+    padding-top: 10px;
   }
 
   nav {
@@ -200,6 +201,11 @@ footer {
   main {
     width: 100%;
     margin: 0;
+  }
+
+  .content {
+    margin-right: 10px;
+    margin-left: 10px;
   }
 
   .crop-img {
