--- a/src/style.css
+++ b/src/style.css
@@ -134,14 +134,14 @@ a {
 
 /*image viewer*/
 .crop-img {
-  height: 150px;
   width: 100%;
+  height: 200px;
   overflow: hidden;
 }
 
 .crop-img img {
   width: 100%;
-  margin: -100px 0;
+  /*margin: -100px 0;*/
 }
 
 .img-caption {
