--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,8 @@
 
+html {
+}
 body {
+  animation: fade-in 2s cubic-bezier(0.84, -0.01, 0, 1.41);
   font-family: 'Inconsolata', serif;
   background: #F1F6FF;
   margin: 0;
@@ -22,6 +25,7 @@ body {
   margin-bottom: 12px;
   background-color: #9CBEF2;
   color: black;
+  border-radius: 2px;
 }
 
 /*NAV BAR*/
@@ -40,13 +44,19 @@ nav ul {
 }
 
 nav ul li {
+  display: block;
   padding-left: 5px;
+  border-radius: 2px;
 }
 
 nav ul li:hover {
-  display: inline-block;
   transition: background .5s ease-in-out;
   border-left: 5px solid #9CBEF2;
+}
+
+nav ul li a {
+  color:inherit;
+  text-decoration: none;
 }
 
 /*use in mobile only */
@@ -66,11 +76,6 @@ nav ul li:hover {
   border-left: 5px solid #5A88CE;
 }
 
-/*For External Menu Links */
-nav ul li a {
-  color:inherit;
-  text-decoration: none;
-}
 
 /*MAIN SITE BODY */
 main {
@@ -137,6 +142,7 @@ a {
   width: 100%;
   height: 200px;
   overflow: hidden;
+  border-radius: 2px;
 }
 
 .crop-img img {
