--- a/src/style.css
+++ b/src/style.css
@@ -84,7 +84,7 @@ nav ul li a {
 main {
   overflow: hidden; /*life saver, worth dedicating */
   min-height: 500px;
-  width: 600px;
+  max-width: 600px;
 
   /*hide all mains in the beginning */
   display: none;
@@ -165,6 +165,30 @@ a {
   color: grey;
 }
 
+/*PROJECT LIST PAGE */
+#project-list {
+}
+
+#project-list div {
+  display: inline-block;
+  padding: 15px;
+  margin : 5px;
+  background-color: white;
+  min-width: 100px;
+  max-width: 200px;
+  min-height: 70px;
+}
+
+#project-list span {
+  display: block;
+  font-size: 70%;
+}
+
+iframe {
+  width: 100%;
+  width: 200px;
+}
+
 /*hi, I'm footer, I like acting like a d**k. */
 footer {
   font-size: 15px;
@@ -176,6 +200,7 @@ footer {
 }
 
 /*for background canvas */
+/*NOT USED */
 canvas {
   position: absolute;
   z-index: -1;
