--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
 
 body {
   /*on load fade in */
-  animation: fadein 2s cubic-bezier(1, 0.17, 0.1, 1);
+  animation: fadein 2s cubic-bezier(0, 0.44, 0.58, 1);
 
   font-family: "Brown-Regular","Helvetica Neue",Helvetica,Arial,sans-serif;
   background: #F1F6FF;
@@ -32,7 +32,7 @@ body {
   display: block;
   padding: 15px;
   margin: 0;
-  font-size: 15px;
+  font-size: 20px;
   margin-bottom: 12px;
   background-color: #9CBEF2;
   color: black;
@@ -53,18 +53,18 @@ nav ul {
   letter-spacing: 0.08em;
 }
 
-nav ul li {
+.page-link {
   display: block;
   padding-left: 5px;
   border-radius: 2px;
 }
 
-nav ul li:hover {
+.page-link:hover {
   transition: background .5s ease-in-out;
   border-left: 5px solid #9CBEF2;
 }
 
-nav ul li a {
+.page-link a {
   color:inherit;
   text-decoration: none;
 }
@@ -74,14 +74,14 @@ nav ul li a {
   display: none;
 }
 
-.selected-page {
+.selected-link {
   color: black;
   background: white;
   display: block;
   border-left: 5px solid #5A88CE;
 }
 
-.selected-page:hover {
+.selected-link:hover {
   display: block;
   border-left: 5px solid #5A88CE;
 }
@@ -139,7 +139,7 @@ a {
 /*PAGES*/
 
 /*image viewer*/
-.slide-img {
+.crop-img {
   width: 100%;
   height: 200px;
   overflow: hidden;
@@ -147,13 +147,9 @@ a {
   border-radius: 2px;
 }
 
-.slide-img img {
-  -webkit-animation: fade-in 4s ease;
-  animation: fade-in 4s ease;
+.crop-img img {
   visibility: visible;
   width: 100%;
-  /*position: absolute;*/
-  /*margin: -100px 0;*/
 }
 
 .img-caption {
@@ -162,44 +158,45 @@ a {
   color: grey;
 }
 
-/*PROJECT LIST PAGE */
-#project-grid span {
-  display: block;
-}
+/*PROJECT TILE PAGE SETTINGS*/
 
 .grid-sizer, .grid-item {
   padding: 10px;
   margin: 1%;
   border: 4px;
   border-radius: 5px;
-  background-color: white;
+  background-color: #447C99;
   float: left;
   width: 31%;
-  height: 120px;
+  height: 160px;
+  font-size: 25px;
+  text-align: center;
 }
 
-.grid-item--width2 {
-  width: 64%;
+.grid-item span {
+  color: #5A88CE;
+  display: none;
+}
+
+.grid-item a {
+  color: #9CBEF2;
+  display: none;
+}
+
+.grid-item:hover {
+  background-blend-mode: difference;
+}
+.grid-item:hover span, .grid-item:hover a {
+  display: block;
 }
 
 .grid-item--height2 {
-  height: 180px;
+  height: 240px;
 }
 
 @media screen and (max-width: 850px) {
   .grid-sizer, .grid-item {
     width: 48%;
-  }
-
-  .grid-item--width2 {
-    width: 96%;
-  }
-}
-
-@media screen and (max-width: 650px) {
-  .grid-sizer, .grid-item {
-    width: 96%;
-    margin: 2%;
   }
 }
 
