--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-	width: 750px;
+	max-width: 750px;
 	margin: 0 auto;
 	background-color: #2B2207;
 	background:url(../img/bg.png);
@@ -15,6 +15,16 @@ body {
 h1 {
 	font-family: 'Arvo', serif;
 	font-size: 85px;
+}
+
+h2 {
+  font-family: 'Arvo', serif;
+	font-size: 30px;
+  color: white;
+  text-transform: uppercase;
+  font-kerning: 2em;
+  margin-top: 16px;
+  margin-bottom: 12px;
 }
 
 .title {
@@ -37,24 +47,26 @@ main {
 
 .project-link {
     text-align: left;
+    text-indent: 20px;
     font-family: 'Quicksand', sans-serif;
     font-style: bold;
+    font-size: 22px;
     /*text-shadow: -4px 3px white;*/
 }
 
-.project-link h2 {
+.project-link h3 {
      color: white;
      margin-bottom: 5px;
      margin-top: 5px;
 }
 
-.project-link h2 span {
+.project-link h3 span {
     color: #B0B0B0;
     font-size: 70%;
     margin-right: 1em;
 }
 
-.project-link h2 b {
+.project-link h3 b {
   color: #B0B0B0;
   font-size: 80%;
 }
