--- a/src/style.css
+++ b/src/style.css
@@ -224,17 +224,14 @@ iframe {
 /*INDIVIDUAL PAGE SPECIFIC STUFF*/
 
 .tweet-wrap {
-  width: 30%;
-  display: inline-block;
-  margin: 40px;
-  margin-bottom: 0px;
+  width: 300px;
+  display: block;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 850px) {
   .tweet-wrap {
     width: 100%;
-    display: block;
-    margin: 4px;
   }
 }
 
