--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
 body {
   /*initial opacity */
   opacity: 0;
+  line-height: 1.4em;
 
   font-family: "Brown-Regular","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-family: 'Source Sans Pro', sans-serif;
@@ -113,29 +114,38 @@ main h1, main h2, main h3, main h4, main h5, main h6 {
 main h1 {
   font-family: 'Bitter', serif;
   color: #5A88CE;
-  /*text-transform: lowercase;*/
+  line-height: 1;
+  font-size: 26px;
 }
 
 main h2 {
   font-family: 'Bitter', serif;
   color: #9CBEF2;
-  /*text-transform: uppercase;*/
+  text-transform: uppercase;
+  font-size: 18px;
 }
 
-main h3, main h4  {
-  font-weight: normal;
-  font-style: italic;
+main h3 {
+  font-weight: bold;
+  font-size: 16px;
+  /*font-style: italic;*/
 }
 
-p {
-  line-height: 1.5em;
-  margin-top: 1.2em;
-  margin-bottom: 1.2em;
+main ul {
+  margin-top: 6 px;
+  margin-bottom: 12px;
 }
 
-a {
+main a {
   color: #B19881;
-  text-decoration: none;
+}
+
+#resume a {
+  color: black;
+}
+
+#resume a:hover {
+  background-color: #9CBEF2;
 }
 
 /*PAGES*/
@@ -185,7 +195,7 @@ a {
   vertical-align: middle;
   padding: 8px;
   border-radius: 6px;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.6);
   text-align: center;
 }
 
@@ -193,12 +203,14 @@ a {
   /*font-family: 'Bitter', serif;*/
   color: #9CBEF2;
   display: block;
-  font-size: 22px;
+  font-size: 20px;
+  text-decoration: none;
 }
 
 .grid-item span {
   font-family: 'Bitter', serif;
   color: white;
+  font-size: 14px;
   display: block;
 }
 
@@ -237,15 +249,6 @@ iframe {
   }
 }
 
-/*for background canvas */
-/*NOT USED */
-canvas {
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-}
-
 @media screen and (max-width: 850px) {
 
   body {
@@ -268,7 +271,6 @@ canvas {
     margin-right: 20px;
   }
 }
-
 
 /*thanks, Steve Jobs*/
 @media screen and (max-width: 650px) {
@@ -367,8 +369,5 @@ canvas {
     height: 70px;
     text-align: center;
     padding-top: 10px;
-  }
-
-  footer div {
   }
 }
