--- a/src/style.css
+++ b/src/style.css
@@ -118,6 +118,10 @@ main h1 {
   font-size: 26px;
 }
 
+main h1 span {
+  color: #9CBEF2;
+}
+
 main h2 {
   font-family: 'Bitter', serif;
   color: #9CBEF2;
@@ -186,32 +190,31 @@ main a {
   background-color: #9CBEF2;
   float: left;
   width: 31%;
-  height: 160px;
+  height: 180px;
   display: table;
 }
 
 .grid-description {
-  display: table-cell;
-  vertical-align: middle;
-  padding: 8px;
-  border-radius: 6px;
-  background-color: rgba(0,0,0,0.6);
-  text-align: center;
+  position: absolute;
+  margin: 6px;
+  padding: 2px;
+  border-radius: 2px;
+  background-color: rgba(0, 0, 0, 0.7);;
+  color: white;
 }
 
 .grid-item a {
-  /*font-family: 'Bitter', serif;*/
   color: #9CBEF2;
-  display: block;
-  font-size: 20px;
+  /*display: block;*/
+  font-size: 16px;
   text-decoration: none;
+  border-radius: 3px;
+  line-height: 1.2em;
 }
 
 .grid-item span {
-  font-family: 'Bitter', serif;
-  color: white;
+  color: #5A88CE;
   font-size: 14px;
-  display: block;
 }
 
 .grid-item:hover {
@@ -220,7 +223,7 @@ main a {
 
 /*mansory settings */
 .grid-item--height2 {
-  height: 240px;
+  height: 300px;
 }
 
 @media screen and (max-width: 850px) {
