--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
 body {
   /*initial opacity */
   opacity: 0;
-  line-height: 1.4em;
+  line-height: 1.6em;
   font-size: 110%;
 
   font-family: "Brown-Regular","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -91,7 +91,7 @@ span#return-to-projecs {
 main {
   overflow: hidden; /*life saver, worth dedicating */
   min-height: 600px;
-  max-width: 740px;
+  max-width: 700px;
 
   /*hide all mains in the beginning */
   display: none;
@@ -103,7 +103,7 @@ main {
 
 /*more width for projects and gallery */
 main#projects, main#gallery {
-  max-width: 960px;
+  max-width: 1160px;
 }
 
 /*general element styles */
@@ -117,6 +117,8 @@ main h1 {
   color: #5A88CE;
   line-height: 1;
   font-size: 26px;
+  margin-top: 12px;
+  margin-bottom: 12px;
 }
 
 main h1 span {
@@ -128,6 +130,8 @@ main h2 {
   color: #9CBEF2;
   text-transform: uppercase;
   font-size: 18px;
+  margin-top: 18cpx;
+  margin-bottom: 2px;
 }
 
 main h3 {
@@ -139,6 +143,11 @@ main h3 {
 main ul {
   margin-top: 6 px;
   margin-bottom: 12px;
+}
+
+main p {
+  margin-top: 18px;
+  margin-bottom: 18px;
 }
 
 main a {
