--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ body {
 
   font-family: "Brown-Regular","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-family: 'Source Sans Pro', sans-serif;
-  background: #F1F6FF;
+  background: #f8fbff;
   margin: 0;
   padding: 30px;
 }
