--- a/src/style.css
+++ b/src/style.css
@@ -7,11 +7,11 @@
 body {
   /*initial opacity */
   opacity: 0;
-  line-height: 1.6em;
   font-size: 110%;
-
+  /*backup font */
   font-family: "Brown-Regular","Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-family: 'Source Sans Pro', sans-serif;
+  /*the aesthetic font */
+  font-family: "Inconsolata", serif;
   background: #f8fbff;
   margin: 0;
   padding: 30px;
@@ -45,7 +45,7 @@ nav {
 nav ul {
   padding-left: 0;
   list-style-type: none;
-  line-height: 1.6em;
+  line-height: 1.45em;
   letter-spacing: 0.08em;
 }
 
@@ -154,7 +154,7 @@ main ul {
 }
 
 main p {
-  line-height: 1.5;
+  line-height: 1.3em;
 }
 
 main a {
@@ -227,12 +227,12 @@ main a {
   margin: 6px;
   padding: 2px;
   border-radius: 2px;
-  background-color: rgba(0, 0, 0, 0.7);;
+  background-color: rgba(255, 255, 255, 1);
   color: white;
 }
 
 .grid-item a {
-  color: #9CBEF2;
+  color: #5A88CE;
   /*display: block;*/
   font-size: 15px;
   text-transform: uppercase;
@@ -242,7 +242,7 @@ main a {
 }
 
 .grid-item span {
-  color: white;
+  color: black;
   font-size: 14px;
 }
 
